--- a/fly.toml
+++ b/fly.toml
@@ -1,20 +1,24 @@
-app = "team-status"
-primary_region = "lhr"
+# fly.toml app configuration file generated for team-status on 2026-01-21T09:32:45Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'team-status'
+primary_region = 'ams'
+console_command = '/rails/bin/rails console'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  RAILS_LOG_LEVEL = "info"
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  size = "shared-cpu-1x"
-  memory = "256mb"
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 256
